Java 8 + Tycho 0.26.0